# freemind-exporter-formatter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMPLETIONS.md  COMPLETION_REPORT.md  IMPLEMENTATION_NOTES.md  Makefile  README.md  generate_completions.py  json_formatter.py  latex_slides.py  leaf_as_text.py  main.bash  main.py  main.zsh  main_wrapper.py  mindmap_exporter.py  mindmap_orgmode.py  mindmap_orgmode_lists.py  orgmode.py  orgmode_date_sections.py  orgmode_dates.py  orgmode_helpers.py  orgmode_lists.py  ppt_slides.py  print_as_titles.py  pyproject.toml  requirements.txt  titles.py
data/: .gitignore  test1_leaf_as_text.expected  test1_print_as_titles.expected
makefiles/: uv.mk
mindmap/: __init__.py  models.py  reader.py
tests/: MyTestCase.test_freeplane_leaf_as_latex_slides.approved.txt  MyTestCase.test_freeplane_leaf_as_text.approved.txt  MyTestCase.test_freeplane_titles.approved.txt  MyTestCase.test_leaf_as_latex_slides.approved.txt  MyTestCase.test_leaf_as_text.approved.txt  MyTestCase.test_mindmap_orgmode.approved.txt  MyTestCase.test_mindmap_orgmode_empty_worklog.approved.txt  MyTestCase.test_mindmap_orgmode_lists.approved.txt  MyTestCase.test_mindmap_orgmode_multiple_dates.approved.txt  MyTestCase.test_mindmap_orgmode_multiple_projects.approved.txt  MyTestCase.test_mindmap_orgmode_no_end_times.approved.txt  MyTestCase.test_mindmap_orgmode_simple.approved.txt  MyTestCase.test_titles.approved.txt  test_e2e.py  test_json_formatter.py  test_json_formatter_integration.py  test_mindmap_orgmode.py  test_mindmap_orgmode_edge_cases.py  test_mindmap_orgmode_integration.py  (+2 more)
(+23 files in other folders)
