[project]
name = "mindmap-formatter"
version = "0.1.0"
description = "Export Freemind mindmaps to various formats"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Alvaro", email = "" }
]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest==8.3.2",
    "approvaltests==14.0.0"
]

[tool.mypy]
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_calls = true
exclude = [".venv"]
