[project]
name = "mindmap-formatter"
version = "0.1.0"
description = "Export Freemind mindmaps to various formats"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Alvaro", email = "" }
]
dependencies = []

[dependency-groups]
# added as `uv add --dev mypy`
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "approvaltests>=14.7.1",
    "ruff>=0.8.0",
    "pre-commit>=3.4.0",
    "pytest-xdist>=3.8.0",
]

[tool.mypy]
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_calls = true
exclude = [".venv"]
